--- a/application/templates/editor.html
+++ b/application/templates/editor.html
@@ -9,5 +9,20 @@ Editor
 
 {% block body %}
 <h1>Editor</h1>
+<style type="text/css" media="screen">
+    #editor { 
+        height: 100px;
+    }
+</style>
+<div id="editor">function foo(items) {
+    var x = "All this is syntax highlighted";
+    return x;
+}</div>
+<script src="/static/js/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/monokai");
+    editor.getSession().setMode("ace/mode/javascript");
+</script>
 {% endblock %}
 
