--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.10.1.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap/button.js') }}"></script>
+
         {%- block head -%}
         {%- endblock -%}
     </head>
