--- a/application/templates/editor.html
+++ b/application/templates/editor.html
@@ -5,33 +5,67 @@ Editor
 {% endblock %}
 
 {% block head %}
+<script src="/static/js/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<style type="text/css" media="screen">
+.file { 
+    border: solid 3px #ccc;
+    margin-bottom: 10px;
+}
+.file-meta { 
+    border-bottom: 3px;
+    padding: 10px 0;
+    margin: 0;
+    background: #333;
+}
+.file-editor { 
+    margin: 0;
+    height: 280px;
+}
+.file-editor-textarea {
+    display: none;
+}
+</style>
 {% endblock %}
 
 {% block body %}
 <h1>Editor</h1>
-<style type="text/css" media="screen">
-    #editor { 
-        height: 280px;
-    }
-</style>
-<div id="editor">function foo(items) {
+
+<form method="post">
+<div id="list-files">
+{% for i in range(2) %}
+    <div class="file">
+        <div class="file-meta row">
+            <div class="col-lg-4">
+                <input type="text" name="file[][name]" placeholder="Input this file name." class="form-control">
+            </div>
+        </div>
+        <textarea name="file[][content]" class="file-editor-textarea"></textarea>
+        <div class="file-editor row">function foo(items) {
     var x = "All this is syntax highlighted";
     return x;
 }</div>
-<script src="/static/js/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+    </div>
+{% endfor %}
+</div>
+
 <script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.getSession().setMode("ace/mode/javascript");
+    var list = $('.file-editor');
+    for(i in list) {
+        var editor = ace.edit(list[i]);
+        editor.setTheme("ace/theme/monokai");
+        editor.getSession().setMode("ace/mode/javascript");
+    }
 </script>
+
 <div id="buttons" style="overflow: hidden;">
     <div style="float: left;">
       <button type="button" class="btn btn-default">Add Another File</button>
     </div>
 
     <div style="text-align: right;">
-      <button type="button" class="btn btn-primary" style="float: right;">Create Gitnote</button>
+      <button type="submit" class="btn btn-primary" style="float: right;">Create Gitnote</button>
     </div>
 </div>
+</form>
 {% endblock %}
 
