--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -14,9 +14,8 @@
         <!-- Custom styles for this template -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 
-        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.10.1.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.10.2.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap/button.js') }}"></script>
 
         {%- block head -%}
         {%- endblock -%}
